--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,35 @@
 @import 'bootstrap';
 @import 'font-awesome';
 
+
 header{
+    a.nav-link{
+        margin-right: .5rem;
+    }
+    .navbar-brand{
+        font-size: 2.25em;
+    }
+}
+footer{
     a.nav-link{
         margin-right: .5rem;
     }
 }
 
+body{
+    background-color: #e9ebee;
+}
+
 pre.debug_dump{
+    padding: 1rem;
+    background-color: #fff;
     margin: 1rem auto;
+}
+
+#log-in, #sign-up{
+    max-width: 400px;
+    margin: 0 auto;
+    .title{
+        font-size: 40px;
+    }
 }
