--- a/app/views/layouts/_account_links.html.erb
+++ b/app/views/layouts/_account_links.html.erb
@@ -3,14 +3,10 @@
         Account
     </a>
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <%= link_to 'My Profile', current_user, class: 'nav-item' %>
-        <a class="dropdown-item" href="#">Another action</a>
+        <%= link_to 'My Profile', current_user, class: 'dropdown-item' %>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Something else here</a>
+        <%= link_to 'Log out', destroy_user_session_path, 
+                               :method => :delete,
+                               class: 'dropdown-item' %>
     </div>
-</li>
-<li class="nav-item">
-    <%= link_to 'Log out', destroy_user_session_path, 
-                           :method => :delete ,
-                           class: 'nav-link'%>
 </li>
